    - debian/rules, debian/sysdeps/sysdeps.mk: Move i386 optimization
      hack out of the rules file and put debugging information back in
      libc6-dbg for i386 (Closes: #165892).
    - debian/patches/crypt.dpatch: Fix initialization in crypt_r
      (Closes: #163260).
    - debian/patches/rtsig.dpatch: Fix the value of SIGRTMIN in non-threaded
      applications (Closes: #165412).

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/libc/DEBIAN/postinst: add more NSS services:
        rsh-server telnetd cyrus-imapd cyrus21-common uw-imapd uw-imapd-ssl
    - debian/packages.d/sparc64.mk: fix build error.
    - debian/libc/DEBIAN/postinst: modify apache2 service,
      apache2 ships its init script in apache2-common, but the script
      is in apache2. So replace from apach2-common to apach2 is needed.
      Closes: #165959

  * Jeff Bailey <jbailey@nisa.net>
    - debian/patches/cvs.dpatch: New file.
    - debian/patches/0list: Update

 -- Daniel Jacobowitz <dan@debian.org>  Tue, 29 Oct 2002 13:14:51 -0500

glibc (2.3.1-3) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/patches/librt-mips.dpatch: librt is not worked on 
      mips/mipsel architecture, we apply it until sarge will be
      released. Thanks to Guido Guenther <agx@sigxcpu.org>.
    - debian/patches/glibc23-ctype-compat.dpatch: added.
      glibc 2.3.x changes some symbols (__ctype_b, __ctype_toupper,
      __ctype_tolower) as hidden attribute. These symbols that are
      crashing the old 2.2.x dynamic linking code in static binaries
      are now exported.
      This patch is originally pulled from RedHat patch, I modified
      it for current debian glibc. Closes: #165554

 -- GOTO Masanori <gotom@debian.or.jp>  Sun, 20 Oct 2002 15:04:48 +0900

glibc (2.3.1-2) unstable; urgency=low

  * This is the "Why did everything stop working, mommy?" release

  * Jeff Bailey <jbailey@nisa.net>
    - debian/libc/DEBIAN/postinst: Warn about NSS changes if upgrading