@@ -64,7 +64,8 @@ include debian/rules.d/source.mk
 clean: debian/control setperms
 	rm -rf glibc-$(VERSION)
 	rm -f debian/libc/DEBIAN/shlibs
-	rm -f debian/control.in/libc{6,6.1,0.3,1}
+	rm -f debian/control.in/libc6 debian/control.in/libc6.1
+	rm -f debian/control.in/libc0.3 debian/control.in/libc1
 	rm -f debian/files debian/substvars log-*
 	rm -f unpacked-source patched-source patched-sourceT -r patched
 	rm -f `find debian -name 'libc*' -type l`
