@@ -9,6 +9,9 @@ glibc (2.3.1-4) unstable; urgency=low
       (Closes: #163260).
     - debian/patches/rtsig.dpatch: Fix the value of SIGRTMIN in non-threaded
       applications (Closes: #165412).
+    - debian/rules, debian/packages.d/libc-dev.mk,
+      debian/packages.d/libc-udeb.mk: Don't use '{}' wildcards, to fix
+      building with /bin/sh -> ash.
 
   * GOTO Masanori <gotom@debian.or.jp>
     - debian/libc/DEBIAN/postinst: add more NSS services:
